force-app/main/default/objects/Burn_Report__c/Burn_Report__c.object-meta.xml
<CustomObject>
    <label>Burn Report</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Burn Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burn Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>