force-app/main/default/objects/Burn_Report__c/fields/Amount_Remaining_On_Budget__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining_On_Budget__c</fullName>
    <label>Amount Remaining On Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>