force-app/main/default/objects/Burn_Report__c/fields/Billable_Amount_Submitted_T_E__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount_Submitted_T_E__c</fullName>
    <label>Billable Amount Submitted (T&amp;E)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>