force-app/main/default/objects/Burn_Report__c/fields/Billable_Amount_Time__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount_Time__c</fullName>
    <label>Billable Amount (Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>