force-app/main/default/objects/Burn_Report__c/fields/Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Billable_Expenses__c</fullName>
    <label>Billable Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>