force-app/main/default/objects/Burn_Report__c/fields/Complete_by_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Complete_by_Billable_Hours__c</fullName>
    <label>% Complete by Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>