force-app/main/default/objects/Burn_Report__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <externalId>true</externalId>
    <label>Service Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>