force-app/main/default/objects/Burn_Report__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <length>25</length>
    <type>Text</type>
</CustomField>